# leptos_i18n

./: Cargo.toml
docs/book/src/usage/: 02_context.md
docs/expanded_macros/: load_locales.md
leptos_i18n/: Cargo.toml
leptos_i18n/src/: context.rs  display.rs  lib.rs  locale_traits.rs  routing.rs  scopes.rs
leptos_i18n/src/macro_helpers/formatting/: mod.rs
leptos_i18n_macro/src/: data_provider.rs
leptos_i18n_macro/src/load_locales/: interpolate.rs  mod.rs  ranges.rs
leptos_i18n_macro/src/utils/: formatter.rs
leptos_i18n_parser/src/parse_locales/: locale.rs
leptos_i18n_parser/src/utils/: key.rs
tests/json/: Cargo.toml
tests/json5/: Cargo.toml
tests/namespaces/: Cargo.toml
tests/yaml/: Cargo.toml
